--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ h2 {
     --spacing: 0.25rem;
     --radius: 0.5rem;
     --padding: 10px;
+    --iframe-width: 600px;
+    --iframe-height: 400px;
+    --iframe-ratio: 1.2;
+
 
 }
 
@@ -92,7 +96,7 @@ a:hover {
 
 /* set the defult font style */
 h1,h2,h3,h4{
-    letter-spacing: 0.5rem;
+
     line-height: 1.25;
     margin: 0 ;
     padding: 0;
@@ -105,14 +109,18 @@ h1{
 }
 
 h2{
+    font-family: "Stick", sans-serif;
     font-size: 2rem;
-    padding: 40px;
+    letter-spacing: 0.5rem;
+    padding: 40px 40px 20px 40px;
     text-align: center;
 }
 
 h3{
     font-size: 1.25rem;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.2rem;
+    padding: 40px 40px 40px 40px;
+    text-align: center;
 }
 
 h4{
@@ -399,6 +407,10 @@ p{
 
 .container-formula-detail {
     border: var(--border-test);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
     width: 100%;
     height: calc(100vh - var(--margin-nav));
     overflow-y: scroll;
@@ -509,7 +521,7 @@ p{
         align-items:start;
 
         p {
-            text-indent: 2em;
+            text-indent: 2rem;
         }
     }
 
@@ -537,12 +549,25 @@ p{
 
 .container-knowledge {
     border: var(--border-test);
-    width: 100%;
+    width:100%;
+    height: calc(100vh - var(--margin-nav));
+    font-family: "Stick", sans-serif;
+    background-color:var(--primary-1);
     display: flex;
     flex-direction: column;
-    height: calc(100vh - var(--margin-nav));
+    margin-top: var(--margin-nav);
+    padding: 30px;
+    text-align: left;
+    justify-content: start;
+    align-items: center;
     overflow-y: scroll;
     scrollbar-width: thin;
+
+    /* background-image: url(./assets/background.png); */
+    /* background-position: fixed; */
+    /* background-repeat: no-repeat; */
+    /* background-attachment: fixed; */
+    /* background-size:cover; */
 
     h2 {
         font-size: 2rem;
@@ -555,4 +580,54 @@ p{
 
     }
 
+
 }
+
+.container-knowledge-detail {
+    border: var(--border-test);
+    width: 100%;
+    max-width: var(--max-width);
+    background-color: var(--background-2);
+    margin-bottom: var(--margin-nav);
+    /* height: calc(100vh - var(--margin-nav)); */
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
+    
+    ul {
+        font-size: 1rem;
+        margin: 0 2rem 1rem 2rem;
+        
+    }
+
+    li {
+        text-indent: 2rem;
+    }
+
+    p {
+        font-size: 1rem;
+        margin: 0 2rem 1rem 2rem;
+        /* text-indent: 2rem; */
+    }
+
+
+}
+
+.iframe {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        align-items: center;
+        padding-top: calc(var(--margin-nav)/2);
+        padding-bottom: calc(var(--margin-nav)/2);
+
+        /* overflow-x: scroll; */
+
+        iframe {
+            /* width: 100%; */
+            width: calc(var(--iframe-width) * var(--iframe-ratio));
+            height: calc(var(--iframe-height) * var(--iframe-ratio));
+
+        }
+    }  
